<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
    <PreferenceCategory
        android:title="@string/preferences_category_main"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_main_show_startup_help"
            android:title="@string/preferences_item_main_show_startup_help_title"
            android:summary="@string/preferences_item_main_show_startup_help_summary"
            android:defaultValue="true"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:key="pref_default_assist_app"
            android:title="@string/preferences_item_default_assist_app_title"
            android:summary="@string/preferences_item_default_assist_app_summary"
            app:iconSpaceReserved="false"
            >
        </Preference>
        <SwitchPreference
            android:key="pref_main_always_show_notification"
            android:title="@string/preferences_item_main_always_show_notification_title"
            android:summary="@string/preferences_item_main_always_show_notification_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <ListPreference
            android:key="pref_text_match_strategy"
            android:title="@string/preferences_item_text_match_strategy_title"
            android:defaultValue="substring"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_appearance"
        app:iconSpaceReserved="false"
        >
        <ListPreference
            android:key="pref_appearance_theme"
            android:defaultValue="default"
            android:title="@string/preferences_item_appearance_theme_title"
            android:summary="@string/preferences_item_appearance_theme_summary"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:title="@string/preferences_item_appearance_accent_color"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="net.nhiroki.bluelineconsole.applicationMain.PreferencesAccentColorActivity"
                android:targetPackage="net.nhiroki.bluelineconsole.beta"
                />
        </Preference>
        <SwitchPreference
            android:key="pref_appearance_animation"
            android:defaultValue="true"
            android:title="@string/preferences_item_appearance_animation_title"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_appearance_show_icons"
            android:defaultValue="true"
            android:title="@string/preferences_item_appearance_show_icons_title"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_apps"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_apps_show_package_name"
            android:title="@string/preferences_item_apps_show_package_name_title"
            android:summary="@string/preferences_item_apps_show_package_name_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_urls"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:title="@string/preferences_item_display_custom_urls_title"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="net.nhiroki.bluelineconsole.applicationMain.PreferencesCustomWebActivity"
                android:targetPackage="net.nhiroki.bluelineconsole.beta"
                />
        </Preference>
        <ListPreference
            android:key="pref_default_search"
            android:defaultValue="none"
            android:title="@string/preferences_item_default_search_title"
            android:summary="@string/preferences_item_default_search_summary"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_custom_commands"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:title="@string/preferences_item_custom_commands_widgets"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="net.nhiroki.bluelineconsole.applicationMain.PreferencesWidgetCommandsActivity"
                android:targetPackage="net.nhiroki.bluelineconsole.beta"
                />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_home_screen"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:title="@string/preferences_item_home_screen_default_items"
            android:summary="@string/preferences_item_home_screen_default_items_summary"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="net.nhiroki.bluelineconsole.applicationMain.PreferencesHomeScreenItemsActivity"
                android:targetPackage="net.nhiroki.bluelineconsole.beta"
                />
        </Preference>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_contacts"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_contact_search_enabled"
            android:title="@string/preferences_item_contacts_enable_search"
            android:summary="@string/preferences_item_contacts_search_permission_explanation"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_advanced"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_mainedittext_hint_locale_english"
            android:title="@string/preferences_item_advanced_main_edittext_hint_locale_english_title"
            android:summary="@string/preferences_item_advanced_main_edittext_hint_locale_english_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_mainedittext_flagforceascii"
            android:title="@string/preferences_item_advanced_main_edittext_flagforceascii_title"
            android:summary="@string/preferences_item_advanced_main_edittext_flagforceascii_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_url_arbitrary_scheme"
            android:title="@string/preferences_item_accept_arbitrary_url"
            android:summary="@string/preferences_item_accept_arbitrary_url_summary"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_security"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_app_lock_enabled"
            android:title="@string/preferences_item_app_lock_enabled_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <EditTextPreference
            android:key="pref_app_lock_pin"
            android:title="@string/preferences_item_app_lock_pin_title"
            android:summary="@string/preferences_item_app_lock_pin_summary"
            android:dialogTitle="@string/preferences_item_app_lock_pin_dialog_title"
            app:dependency="pref_app_lock_enabled"
            app:iconSpaceReserved="false"
            />
        <SwitchPreference
            android:key="pref_app_lock_screen_off_only"
            android:title="@string/preferences_item_app_lock_screen_off_only_title"
            android:defaultValue="false"
            app:dependency="pref_app_lock_enabled"
            app:iconSpaceReserved="false"
            />
        <EditTextPreference
            android:key="pref_app_lock_delay"
            android:title="@string/preferences_item_app_lock_delay_title"
            android:summary="@string/preferences_item_app_lock_delay_summary"
            android:defaultValue="0"
            android:dialogTitle="@string/preferences_item_app_lock_delay_dialog_title"
            app:dependency="pref_app_lock_enabled"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_ai"
        app:iconSpaceReserved="false"
        >
        <SwitchPreference
            android:key="pref_ai_enabled"
            android:title="@string/preferences_item_ai_enabled_title"
            android:defaultValue="false"
            app:iconSpaceReserved="false"
            />
        <EditTextPreference
            android:key="pref_ai_api_key"
            android:title="@string/preferences_item_ai_api_key_title"
            android:summary="@string/preferences_item_ai_api_key_summary"
            android:dialogTitle="@string/preferences_item_ai_api_key_dialog_title"
            app:dependency="pref_ai_enabled"
            app:iconSpaceReserved="false"
            />
        <EditTextPreference
            android:key="pref_ai_model"
            android:title="@string/preferences_item_ai_model_title"
            android:summary="@string/preferences_item_ai_model_summary"
            android:defaultValue="gemini-2.5-flash"
            android:dialogTitle="@string/preferences_item_ai_model_dialog_title"
            app:dependency="pref_ai_enabled"
            app:iconSpaceReserved="false"
            />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/preferences_category_about_this_app"
        app:iconSpaceReserved="false"
        >
        <Preference
            android:key="dummy_pref_app_info"
            android:title="@string/app_name"
            android:icon="@mipmap/ic_launcher"
            app:iconSpaceReserved="false"
            />
        <Preference
            android:title="@string/preferences_item_about_this_app_github_repo"
            android:summary="@string/preferences_item_about_this_app_github_repo_summary"
            app:iconSpaceReserved="false"
            >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/app_source_code_url"
                />
        </Preference>
        <Preference
            android:title="@string/preferences_item_about_this_app_licensing_information"
            app:iconSpaceReserved="false"
            >
            <intent
                android:targetClass="net.nhiroki.bluelineconsole.applicationMain.LicensingInformationActivity"
                android:targetPackage="net.nhiroki.bluelineconsole.beta"
                />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>
